# LLM_SFM_tool_deployment_public

./: .gitignore  BENCHMARK_CARD.md  BENCHMARK_VERIFIER_MAP.md  C5_ANTIBODY_OOD_PLAN.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  FREETEXT_ENTITY_RESOLUTION_DESIGN_2026-06-26.md  IMPLEMENTATION_TEST_NOTES.md  LICENSE  MODEL_CARD.md  NEGBIODB_CT_FUZZY_RETRIEVAL_DESIGN_2026-06-26.md  NEGBIODB_CT_TRAJECTORY_DESIGN_2026-06-25.md  NULLATLAS_RL_ENV_DESIGN_2026-06-26.md  POST_TRAIN_DEPLOYMENT_FRAMING.md  PROJECT_BRIEF.md  PUBLIC_RELEASE_AUDIT.md  README.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  RESEARCH_SUMMARY.md  REVIEWER_GUIDE.md  ROADMAP.md  SECURITY.md  SOURCE_MAP.md  STATUS.md  pyproject.toml  requirements-public.txt  requirements.txt
.github/: pull_request_template.md
a2_freetext/: .gitignore  A2_RERANKER_RL_REPORT_2026-06-28.md  RERANKER_RL_ENV_DESIGN_2026-06-28.md  band_cases.json  build_band_rl_dataset.py  build_chembl_aliases.py  build_crosswalk.py  build_rxnorm_tier.py  eval_disease_biolord.py  eval_disease_loo.py  eval_disease_precision.py  eval_drug_kb.py  eval_drug_loo.py  eval_drug_union.py  eval_loo_random.py  grpo_train.py  local_rerank.py  paths.py  precompute_band.py  realtext_precision.py  rerank.py  reranker_proto.py  reranker_proto2.py  resolve_a2.py  resolve_disease.py  resolve_drug.py  sapbert_drug.py  sapbert_residue.py  sft_train.py
demo/: README.md  public_trajectory_cases.jsonl
examples/: analyze_negbiodb_ct_prompt_only.py  analyze_negbiodb_ct_runner_results.py  run_negbiodb_ct_adapter_demo.py  run_public_demo.py  (+4 more)
(+616 files in other folders)
