[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-sfm-tool-deployment"
version = "0.1.0"
description = "Trajectory evaluation and post-training artifacts for biology tool-use agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jihoon Kim" }
]
dependencies = [
    "anthropic>=0.40",
    "numpy>=1.26",
    "openai>=1.40",
    "peft>=0.11",
    "rapidfuzz>=3.9",
    "torch>=2.3",
    "transformers>=4.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["llm_sfm_tool_deployment*", "negbiodb_ct*"]
